виправив баг модалки на мобілці та таблетці
тепер в незалежності від тексту все суперово працює усюди)

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -86,10 +86,16 @@
         Doloremque aperiam atque sapiente.
       </p>
       <p class="about__text-modal">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non magnam sunt eligendi
-        quidem ipsam excepturi consequuntur expedita ex quae numquam consequatur, eveniet nisi. Quo,
-        modi vero, ex est itaque praesentium recusandae fuga, illo quos nemo incidunt corporis optio
-        magnam?
+       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel fugiat asperiores voluptatem iusto, similique nostrum repellendus! Quaerat maiores non minus.
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolorum ratione esse assumenda ipsa distinctio optio error rerum laudantium delectus non totam adipisci vitae dignissimos, pariatur sit dolores ipsum ab magnam ducimus. Sint ipsam odio qui obcaecati temporibus necessitatibus sequi suscipit voluptatum totam et quis, culpa assumenda ea ratione iste.
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente accusamus odit dicta eius. Ea fugiat cupiditate, dicta voluptatum illo voluptate delectus ratione quas, ipsum repellendus earum laboriosam neque, fuga necessitatibus!
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur ad illo vero asperiores veniam error eum eaque porro dicta quibusdam.
       </p>
     </div>
   </div>
