--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -17,8 +17,8 @@
 
 .about-modal {
   position: absolute;
-  height: 80%;
-  width: calc(100vw - 50px);
+  height: calc(100vh - 50px);
+  width: 100vw;
   background-color: $background-pink;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -94,7 +94,7 @@
   margin-right: auto;
   border-radius: 22px;
   @media screen and (max-width: 768px) {
-    max-width: 250px;
+    max-width: calc(100% - 6vw);
   }
   @media screen and (min-width: 768px) {
     max-width: 450px;
@@ -105,7 +105,7 @@
 }
 
 .about__text-modal {
-  max-width: 220px;
+  max-width: calc(100% - 6vw);
   margin-left: auto;
   margin-right: auto;
   font-family: DM Sans;
@@ -115,7 +115,7 @@
   line-height: 1.62;
   margin-top: 30px;
   @media screen and (min-width: $tablet) {
-    max-width: 380px;
+    max-width: 450px;
     font-size: 10px;
     line-height: 1.76;
   }
