add buy button to mobile menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -58,7 +58,7 @@
         <use href="images/sprites.svg#close"></use>
       </svg>
     </button>
-    <button type="button" class="button--white button__hero-mobile" header-buy-open>
+    <button type="button" class="button--white button__hero-mobile" mobile-menu-buy-open>
       Buy now
       <svg class="about__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-right"></use>
@@ -86,9 +86,9 @@
 </div>
 <!-- Modal MENU end -->
 
-<div class="backdrop-header is-hidden" header-buy>
+<div class="backdrop-header is-hidden" header-buy mobile-menu-buy>
   <div class="header-buy-modal">
-    <button type="button" class="header-btn-close" header-buy-close>
+    <button type="button" class="header-btn-close" mobile-menu-buy-close>
       <svg class="modal__icon--close" width="18" height="18">
         <use href="images/sprites.svg#close"></use>
       </svg>
