add finishing touches

--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -233,7 +233,7 @@
   color: #d41443;
 }
 
-/////modal-maps//////
+//modal-maps
 
 .backdrop-map {
   position: fixed;
@@ -265,7 +265,7 @@
   // width: 305px;
   // height: 412px;
   padding: 20px;
-  background: #ffb8ca;
+  background: #f8f8f8;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
