fix typos, remove checkbox

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -121,7 +121,7 @@
         </label>
 
         <label class="modal-form-field"
-          >Tell
+          >Phone
           <span class="modal-form-wrapper">
             <input
               type="tel"
@@ -138,7 +138,7 @@
         </label>
 
         <label class="modal-form-field"
-          >Mail
+          >Email
           <span class="modal-form-wrapper">
             <input
               type="email"
@@ -156,18 +156,13 @@
         </label>
 
         <label class="modal-form-field"
-          >comment
+          >Comment
           <textarea
             class="modal-form-message"
             name="user-message"
             placeholder="Enter text"
           ></textarea>
         </label>
-        <input type="checkbox" id="accept-policy" class="modal-form-checkbox visually-hidden" />
-        <label for="accept-policy" class="modal-form-check-box-label"
-          >I agree to the newsletter and accept&nbsp;
-          <a class="modal-form-chekbox-link" href="./index.html">Franchise terms</a></label
-        >
         <button class="modal-form-button" type="submit">SEND</button>
       </form>
     </div>
