minor modal from edits

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -101,7 +101,7 @@
         </svg>
       </button>
       <form action="#" class="modal-form">
-        <p class="modal-form-head">Fill out the form to get about the terms of the franchise</p>
+        <p class="modal-form-head">Find out more about our franchise</p>
         <label class="modal-form-field"
           >Name
           <span class="modal-form-wrapper">
